--- a/ds-landscape.qmd
+++ b/ds-landscape.qmd
@@ -168,12 +168,18 @@ ggplot(df, aes(x = cty)) +
 ## R vs. Python
 
 -   Pros and Cons?
--   Rise and Falls of Popular Programming Languages: from 1958 to 2025
+-   Rise and Fall of Popular Programming Languages: from 1958 to 2025 (Next slide)
 
-    {{< video "https://www.youtube.com/watch?v=ZTPrbAKmcdo" >}}
+---
+
+{{< video https://www.youtube.com/watch?v=ZTPrbAKmcdo
+    title="Rise and Fall of Popular Programming Languages: from 1958 to 2025"
+    width="100%" height="100%"
+>}}
+
 
 ## Assignments?
 
-:::{.callout-tip}
+::: callout-tip
 Please refer to the weekly schedule and Canvas.
 :::
